--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <style lang="scss"> @import 'node_modules/handsontable/dist/handsontable.full.min.css';</style>
     <meta charset="utf-8">
     <title>React App Setup</title>
 </head>
