--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 <head>
     <style lang="scss">
         @import 'node_modules/handsontable/dist/handsontable.full.min.css';
+        @import 'node_modules/react-chessground/dist/styles/chessground.css';
     </style>
     <style>
         body {
