--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <style lang="scss">
         @import 'node_modules/handsontable/dist/handsontable.full.min.css';
         @import 'node_modules/react-chessground/dist/styles/chessground.css';
+        @import 'node_modules/bootstrap/dist/css/bootstrap.min.css';
     </style>
     <style>
         body {
