invalid move message added

--- a/client/index.html
+++ b/client/index.html
@@ -13,12 +13,35 @@
             font-size: 12px;
             font-family: 'Open Sans', Helvetica, Arial;
         }
+
         .handsontable .yellow {
             background: yellow;
+            border-collapse: separate;
+            height: 100%;
+            line-height: 100%;
         }
-        </style>
+
+        .handsontable td {
+            padding: 0px;
+            height: 100%;
+            line-height: 100%;
+        }
+
+        .handsontable tr {
+            padding: 0px;
+            height: 100%;
+            line-height: 100%;
+        }
+
+        .handsontable th {
+            padding: 0px;
+            height: 100%;
+            line-height: 100%;
+            font-weight: bold;
+        }
+    </style>
     <meta charset="utf-8">
-    <title>React App Setup</title>
+    <title>Partiář</title>
 </head>
 
 <body>
